xdg-toplevel is marked as suspended while it's visible and renders
Affected version
45.2, probably broken right after when suspended was added. This is all on fedora 39 without any extensions to gnome shell.
Bug summary
The window has SUSPENDED
state for the first configure preventing it from being shown
when the client uses that information to decide when to render or not.
Steps to reproduce
You'd need alacritty 0.13.0 and run it with
alacritty -o "window.startup_mode='Maximized'"
or Fullscreen
instead of maximized.
This is not happening when the window is run without those mods.
What happened
Window is invisible because it thinks that it's suspended, thus it doesn't try to render.
What did you expect to happen
Never set SUSPENDED
for the first configure.
Relevant logs, screenshots, screencasts etc.
WAYLAND_DEBUG=1
log interleaved with some extra alacritty logging and a configure dump.